src/main/kotlin/com/example/backendsig/error/exception/UnauthorizedException.kt
package com.example.backendsig.error.exception

import java.lang.RuntimeException


class UnauthorizedException(message: String):RuntimeException(message)